--- a/index.html
+++ b/index.html
@@ -2,25 +2,25 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Antony Diego</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <link rel="stylesheet" href="./styles/styles.css">
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
+  <link rel="stylesheet" href="./styles/styles.css" />
 </head>
 
-<body>
-  <nav class="container p-5 navbar bg-black" data-bs-theme="dark">
+<body class="bg-black">
+  <nav class="container p-4 navbar bg-black" data-bs-theme="dark">
     <div class="container-fluid">
-      <a class="navbar-brand">PORTFÓLIO ANTONY DIEGO</a>
+      <a class="navbar-brand"> <img src="./img/logo/logo.png" alt="" /> </a>
       <ul class="nav justify-content-end">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light" href="#">About</a>
+          <a class="nav-link" href="#">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Portfólio</a>
@@ -34,46 +34,21 @@
       </ul>
     </div>
   </nav>
-
-  <div class="edrea_tm_section animated" id="home">
-    <div class="section_inner">
-      <div class="edrea_tm_home">
-        <h3 class="name">Antony <span class="coloring">Diego</span></h3>
-        <h3 class="job">
-          <span class="cd-headline rotate-1">
-            <!-- ANIMATE TEXT VALUES: zoom, rotate-1, letters type, letters rotate-2, loading-bar, slide, clip, letters rotate-3, letters scale, push,  -->
-            <span class="blc">Creative</span>
-            <span class="cd-words-wrapper">
-              <b class="is-visible">Designer</b>
-              <b>Developer</b>
-              <b>Freelancer</b>
-            </span>
-          </span>
-        </h3>
-        <div class="edrea_tm_button transition_link">
-          <a href="#contact">Get in Touch</a>
-        </div>
-      </div>
+  <div class="nome">
+    <h1>ANTONY <span class="last-name">DIEGO</span></h1>
+  </div>
+  <div class="wrapper">
+    <p>Creative</p>
+    <div class="words">
+      <span>Developer</span>
+      <span>Designer</span>
+      <span>Freelancer</span>
+      <span>Photografer</span>
     </div>
   </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  <div class="touch">
+    <button>Get in Touch</button>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
